--- a/multi-module/webapp/pom.xml
+++ b/multi-module/webapp/pom.xml
@@ -19,10 +19,20 @@
     <finalName>${project.artifactId}</finalName>
 
     <plugins>
-      <plugin>
+      <!--plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-      </plugin>
+      </plugin-->
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+            <url>http://localhost:8080/manager</url>
+            <server>tomcat7</server>
+            <path>/${project.build.finalName}</path>
+        </configuration>
+        </plugin>
     </plugins>
   </build>
 
